[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Swiss Army Knife for Cybersecurity"
authors = [
    {name = "RykerWilder"}
    {name = "pavvvz"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.26.0",
    "python-whois>=0.8.0"
]

[project.scripts]
sentinel initialize = "sentinel.utils:create_venv_and_install_deps"
sentinel start = "sentinel.main:main"