[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Swiss Army Knife for Cybersecurity"
authors = [
    {name = "RykerWilder"},
    {name = "pavvvz"}
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.26.0",
    "python-whois>=0.8.0",
    "colorama>=0.4.6",
    "psutil>=5.9.0"
]

[tool.setuptools]
packages = ["sentinel"] 